--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,13 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Multi-User Camera Viewer</title>
+  <title>WebRTC Camera Share</title>
 </head>
 <body>
   <h1>WebRTC Camera Share</h1>
-  <video id="localVideo" autoplay muted playsinline></video>
-  <div id="remoteVideos"></div>
-
-  <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
 </html>
